services/registry/02-registry-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      volumes:
        - name: registry-artifacts-vol
          persistentVolumeClaim:
            claimName: registry-artifacts-pvc
        - name: registry-certs-vol
          persistentVolumeClaim:
            claimName: registry-certs-pvc
      containers:
        - name: registry
          image: "registry:2"
          imagePullPolicy: IfNotPresent
          ports:
            - name: web
              containerPort: 5000
          volumeMounts:
            - name: registry-artifacts-vol
              mountPath: /data
            - name: registry-certs-vol
              mountPath: /opt/certs
          resources:
            limits:
              cpu: "0.5"
              memory: "1Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: default
  labels:
    app: registry
spec:
  type: NodePort
  selector:
    app: registry
  ports:
    - name: web
      targetPort: web
      port: 80
