services/registry/05-registry-dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-dashboard
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry-dashboard
  template:
    metadata:
      labels:
        app: registry-dashboard
    spec:
      containers:
        - name: registry-dashboard
          image: "joxit/docker-registry-ui:main"
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 80
          resources:
            limits:
              cpu: "0.5"
              memory: "1Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: registry-dashboard
  namespace: default
  labels:
    app: registry-dashboard
spec:
  type: NodePort
  selector:
    app: registry-dashboard
  ports:
    - name: web
      targetPort: web
      port: 80
