services/registry/04-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: quay-ingress
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: (Host("registry.kluster.local")) || (Host("registry.ladesa.com.br")) || PathPrefix(`/`)
      services:
        - name: quay
          namespace: default
          port: web
