services/registry/06-registry-dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-dashboard-ingress
spec:
  rules:
    - host: registry.kluster.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: registry-dashboard
                port:
                  name: web
